--- a/vocab/wrangler.jsonc
+++ b/vocab/wrangler.jsonc
@@ -34,15 +34,18 @@
 	 * Static Assets
 	 * https://developers.cloudflare.com/workers/static-assets/binding/
 	 */
-	// "assets": { "directory": "./public/", "binding": "ASSETS" }
+	"assets": { "directory": "./public/", "binding": "ASSETS" }
 	/**
 	 * Service Bindings (communicate between multiple Workers)
 	 * https://developers.cloudflare.com/workers/wrangler/configuration/#service-bindings
 	 */
 	// "services": [{ "binding": "MY_SERVICE", "service": "my-service" }]
-	"triggers": {
-		"crons": [
-			"* * * * *"
-		]
-	}
+	,
+	/**
+	 * KV Namespaces
+	 * https://developers.cloudflare.com/workers/wrangler/configuration/#kv-namespaces
+	 */
+	"kv_namespaces": [
+		{ "binding": "VOCAB", "id": "6a096b0353ce45839ad44f6be66e072b" }
+	]
 }
