--- a/mindmap/clouf/wrangler.jsonc
+++ b/mindmap/clouf/wrangler.jsonc
@@ -37,15 +37,23 @@
 	 * Static Assets
 	 * https://developers.cloudflare.com/workers/static-assets/binding/
 	 */
-	"assets": {  "directory": "./public/",  "binding": "ASSETS" },
+	"assets": {
+		"directory": "./public/",
+		"binding": "ASSETS"
+	},
 	/**
 	 * KV Namespaces
 	 * https://developers.cloudflare.com/workers/wrangler/configuration/#kv-namespaces
 	 */
 	"kv_namespaces": [
 		{
-			"binding": "asdf",
+			"binding": "MINDMAP_KV",
 			"id": "173f367c9acc4c6fa0e273229adb75c9"
+		},
+		{
+			"binding": "VOCAB",
+			"id": "94679307dd424c0fab94ae4eba3048f4",
+			"remote": true
 		}
 	]
 	/**
